--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 body {
   min-height: 100vh;
   margin: 0;
-  /* background-color: rgb(60, 52, 74); */
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
+  background-color: var(--background-main-content);
 }
 h1,
 h2,
